# cxxqa

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  mkdocs.yml  pyproject.toml  vcpkg.json
src/: README.md  main.cpp  scratch.cpp
src/cxxqa/: app.cpp  app.hpp  compile_command.cpp  compile_command.hpp  config.cpp  config.hpp  exception.cpp  exception.hpp  git.cpp  git.hpp  proc.cpp  proc.hpp
src/cxxqa/core/: app.cpp  app.hpp  config.cpp  config.hpp  exception.cpp  exception.hpp
src/cxxqa/parse/: README.md  compile_command.cpp  compile_command.hpp  cppcheck.cpp  cppcheck.hpp  diagnostic.cpp  diagnostic.hpp  parser.cpp  parser.hpp  sarif.cpp  sarif.hpp
src/cxxqa/parse/detail/: sarif_spec.hpp
src/cxxqa/tool/: README.md  git.cpp  git.hpp
src/cxxqa/util/: filesystem.hpp  flags.hpp  fmt.hpp  heap_optional.hpp  json.hpp  log.hpp  proc.cpp  proc.hpp  ranges.hpp  result.cpp  result.hpp  xml.hpp
src/sharif/core/: README.md  app.cpp  app.hpp  config.cpp  config.hpp
src/sharif/parse/: compile_command.cpp  compile_command.hpp  cppcheck.cpp  cppcheck.hpp  diagnostic.cpp  diagnostic.hpp  parser.cpp  parser.hpp  sarif.cpp  sarif.hpp
src/sharif/parse/detail/: sarif_spec.hpp
src/sharif/tool/: git.cpp  git.hpp
src/sharif/util/: README.md  filesystem.hpp  flags.hpp  fmt.hpp  heap_optional.hpp  json.hpp  log.hpp  proc.cpp  proc.hpp  ranges.hpp  result.cpp  result.hpp  xml.hpp
test/: CMakeLists.txt  diagnostic.test.cpp  parser.test.cpp  test.cpp
tools/: example.sarif.json
tools/cmake/toolchain/: gcc-asan.cmake
tools/cmake/toolchain/settings/: vcpkg.cmake
